--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Happy Birthday</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <p>Hola Mundo! </p>
+    <div class="container">
+        <h1>🎉 ¡Feliz Cumpleaños! 🎂</h1>
+        <p>Espero que tengas un día increíble lleno de amor y felicidad. ¡Disfruta tu día especial!</p>
+        <button onclick="showSurprise()">Haz clic para una sorpresa</button>
+        <div id="surprise" class="hidden">
+            🎁 ¡Aquí tienes un regalo virtual! 🎁
+        </div>
+    </div>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
