--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
     <div class="container">
         <h1>🎉 ¡Feliz Cumpleaños! 🎂</h1>
-        <p>Espero que tengas un día increíble lleno de amor y felicidad. ¡Disfruta tu día especial!</p>
+        <p>Espero que tengas un día increíble lleno de amor y felicidad. ¡Disfruta tu día especial!</p> 
         <button onclick="showSurprise()">Haz clic para una sorpresa</button>
         <div id="surprise" class="hidden">
             🎁 ¡Aquí tienes un regalo virtual! 🎁
         </div>
     </div>
     <script src="scripts/index.js"></script>
+
+    <!-- en el parrafo hay que camebiarlo  -->
 </body>
 </html>
